[gd_scene load_steps=3 format=2]

[ext_resource path="res://guis/TurnGui.gd" type="Script" id=1]
[ext_resource path="res://guis/TurnHeader.tscn" type="PackedScene" id=2]

[node name="TurnGui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TurnHeader" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -164.0
margin_top = 13.0
margin_right = 164.0
margin_bottom = 27.0

[node name="FinishDeploy" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -40.0
margin_right = -20.0
margin_bottom = -20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Finish Deployment"

[node name="FinishTurn" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -40.0
margin_right = -90.0
margin_bottom = -20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Finish Turn"

